Issue #3096602 by Kingdutch: Fix admin toolbar and menu z-index fighting
We've been adding z-index fixes to the menu for the admin toolbar.
However, changing the z-index of the menu causes it to go under page
elements which wreaks havoc.

This commit looks at the underlying cause and stops trying to change the
menu but only changes the admin menu.

Unfortunately we do have to force the menu into relative positioning to
ensure the menu's aren't positioned on top of eachother.

--- a/themes/socialbase/assets/css/admin-toolbar.css
+++ b/themes/socialbase/assets/css/admin-toolbar.css
@@ -13,9 +13,14 @@
           transform: translateY(39px) translateX(0);
 }
 
+.toolbar-vertical .navbar-default,
 .toolbar-fixed .navbar-default {
   position: relative;
-  z-index: 100;
+}
+
+.toolbar-vertical .toolbar .toolbar-bar,
+.toolbar-fixed .toolbar .toolbar-bar {
+  z-index: 1080;
 }
 
 .toolbar-fixed .main-container,
@@ -31,12 +36,5 @@
   .toolbar-vertical .off-canvas-right.is-open {
     -webkit-transform: none;
             transform: none;
-  }
-}
-
-@media (max-width: 599px) {
-  .toolbar-vertical .navbar-default {
-    position: relative;
-    z-index: 1;
   }
 }
